# cs1504

./: .cproject  .project  CMakeLists.txt  README.md
.externalToolBuilders/: CMakeBuilder.launch
CMake/: cmake_uninstall.cmake.in
CMake/Modules/: TargetDistclean.cmake
Debug/: makefile
Debug/src/: subdir.mk
src/: CMakeLists.txt  crccalc.cpp  crccalc.h  cs1504.cpp  csp2.cpp  csp2.h
