INCLUDE_DIRECTORIES(
    )

SET (PROGRAMS cs1504)

SET(CS1504_SRCS
    crccalc.cpp
    cs1504.cpp
    csp2.cpp  
    )


SET(CS1504_HEADERS
    crccalc.h
    csp2.h
    )
    
ADD_EXECUTABLE(cs1504 ${CS1504_SRCS} ${CS1504_HEADERS})

INSTALL(TARGETS cs1504 RUNTIME DESTINATION ${PKG_BINDIR})
INSTALL(FILES ${CS1504_HEADERS} DESTINATION include)

